# adya

./: BUILD.bazel  WORKSPACE  bazel-adya  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum
.github/workflows/: push.yml  release.yml
cmd/adya/: BUILD.bazel  main.go
hack/: workspace-status.sh
internal/: BUILD.bazel  handle.go  handler.go  message_create.go
